<resources>
    <string name="app_name">BolaSatu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vs">VS</string>
    <string name="add_button">ADD</string>
    <string name="match_id">Match ID</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="time">Time (HH:mm)</string>
    <string name="timeLepas">Time (NNNHH:mm)</string>
    <string name="button">button</string>
    <string name="hari_ini">HARI INI</string>
    <string name="date">Date (YYYYMMDD)</string>
    <string name="date2">Date (NNNNNNYYYYMMDD)</string>
    <string name="pause">pause</string>
    <string name="reset">reset</string>
    <string name="start">start</string>
    <string name="akan_datang">Akan Datang</string>
    <string name="langsung">Langsung</string>
    <string name="lepas">lepas</string>
    <string name="score">Score</string>
    <string name="refresh">Refresh</string>

    <string name="liga_super">Liga Super</string>
    <string name="liga_premier">Liga Premier</string>
    <string name="piala_fa">Piala FA</string>
    <string name="piala_malaysia">Piala Malaysia</string>

    <string-array name="tambahanMasa">
        <item>X</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


    <string-array name="hari">
        <item>Isnin</item>
        <item>Selasa</item>
        <item>Rabu</item>
        <item>Khamis</item>
        <item>Jumaat</item>
        <item>Sabtu</item>
        <item>Ahad</item>
    </string-array>

    <string name="col_1">No</string>
    <string name="col_2">Pasukan</string>
    <string name="col_3">P</string>
    <string name="col_4">M</string>
    <string name="col_5">S</string>
    <string name="col_6">K</string>
    <string name="col_7">J/B</string>
    <string name="col_8">BG</string>
    <string name="col_9">Ma</string>

    <string name="row_1">1</string>
    <string name="row_2">2</string>
    <string name="row_3">3</string>
    <string name="row_4">4</string>
    <string name="row_5">5</string>
    <string name="row_6">6</string>
    <string name="row_7">7</string>
    <string name="row_8">8</string>
    <string name="row_9">9</string>
    <string name="row_10">10</string>
    <string name="row_11">11</string>
    <string name="row_12">12</string>

    <string name="kedudukan">Kedudukan</string>
    <string name="mesej1">Perlawanan serterusnya akan dikemaskini</string>
    <string name="pusingan">Pusingan</string>
    <string name="kelayakan">Kelayakan</string>
    <string name="awal">Awal</string>
    <string name="kalah_mati">Kalah Mati</string>
    <string name="ked">KED</string>
    <string name="satu1">1</string>
    <string name="satu">–</string>
    <string name="dua">2</string>
    <string name="jdt">JDT</string>

</resources>